--- a/app/src/main/res/drawable/bestbuy.xml
+++ b/app/src/main/res/drawable/bestbuy.xml
@@ -12,7 +12,7 @@
             <item android:bottom="0dp" android:right="0dp">
                 <shape>
                     <gradient android:angle="270"
-                        android:endColor="#8db0d3" android:startColor="#8db0d3" />
+                        android:endColor="#ff2d333f" android:startColor="#ff81a1c1" />
                     <stroke android:width="1dp" android:color="#ffe2e2e2" />
                     <corners android:radius="10dp" />
 
