--- a/app/src/main/res/drawable/btncon.xml
+++ b/app/src/main/res/drawable/btncon.xml
@@ -12,7 +12,7 @@
             <item android:bottom="0dp" android:right="0dp">
                 <shape>
                     <gradient android:angle="270"
-                        android:endColor="#c8ffa241" android:startColor="#C8FFA241" />
+                        android:endColor="#116d0a" android:startColor="#25b90d" />
                     <stroke android:width="1dp" android:color="#ffb6c9e2" />
                     <corners android:radius="10dp" />
 
