--- a/app/src/main/res/drawable/coni.xml
+++ b/app/src/main/res/drawable/coni.xml
@@ -7,8 +7,8 @@
             <item android:bottom="2dp" android:right="2dp" android:left="2dp" android:top="2dp">
                 <shape>
                     <gradient android:angle="270"
-                        android:endColor="#253f71" android:startColor="#ff1655a0" />
-                    <stroke android:width="1dp" android:color="#ffe2e2e2" />
+                        android:endColor="#68889b" android:startColor="#68889b" />
+                    <stroke android:width="1dp" android:color="#ff1e262d" />
                     <corners android:radius="10dp" />
 
                 </shape>
