--- a/app/src/main/res/drawable/shadow2.xml
+++ b/app/src/main/res/drawable/shadow2.xml
@@ -12,7 +12,7 @@
             <item android:bottom="0dp" android:right="0dp">
                 <shape>
                     <gradient android:angle="270"
-                        android:endColor="#ff1655a0" android:startColor="#ff1655a0" />
+                        android:endColor="#262626" android:startColor="#565656" />
                     <stroke android:width="1dp" android:color="#ffe2e2e2" />
                     <corners android:bottomRightRadius="10dp" android:bottomLeftRadius="10dp"/>
 
