--- a/app/src/main/res/layout-large/about.xml
+++ b/app/src/main/res/layout-large/about.xml
@@ -14,7 +14,17 @@
             android:background="@drawable/coni"
             android:layout_centerVertical="true"
             android:layout_alignParentRight="true"
-            android:layout_marginRight="5dp">
+            android:layout_marginRight="5dp"
+            android:id="@+id/relativeLayoutGold"
+            android:onClick="ShowGameshopPopUp">
+
+            <ImageView
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:background="@drawable/plus"
+                android:layout_alignParentLeft="true"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="7dp"/>
 
             <TextView
                 android:layout_width="wrap_content"
@@ -41,7 +51,7 @@
 
         <RelativeLayout
             android:layout_width="70dp"
-            android:layout_height="wrap_content"
+            android:layout_height="40dp"
             android:layout_centerVertical="true"
             android:background="@drawable/coni"
             android:layout_marginLeft="5dp"
@@ -49,18 +59,18 @@
 
             <ImageButton
                 android:layout_width="45dp"
-                android:layout_height="40dp"
+                android:layout_height="25dp"
+                android:id="@+id/btnGoBackFromPopup"
                 android:layout_centerVertical="true"
                 android:layout_marginLeft="10dp"
                 android:alpha="0.7"
-                android:background="@drawable/arr"
-                android:id="@+id/btnGoBackFromPopup"/>
+                android:background="@drawable/arr"/>
 
         </RelativeLayout>
 
         <RelativeLayout
             android:layout_width="85dp"
-            android:layout_height="wrap_content"
+            android:layout_height="40dp"
             android:layout_centerVertical="true"
             android:layout_centerHorizontal="true"
             android:background="@drawable/coni"
@@ -72,7 +82,7 @@
                 android:text="0"
                 android:layout_centerHorizontal="true"
                 android:textColor="#ffffffff"
-                android:textSize="40sp"
+                android:textSize="35sp"
                 android:id="@+id/textViewCurLevel"
                 android:alpha="0.7"/>
 
