--- a/app/src/main/res/layout-large/game.xml
+++ b/app/src/main/res/layout-large/game.xml
@@ -19,6 +19,14 @@
             android:id="@+id/relativeLayoutGold"
             android:onClick="ShowGameshopPopUp">
 
+            <ImageView
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:background="@drawable/plus"
+                android:layout_alignParentLeft="true"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="7dp"/>
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -44,7 +52,7 @@
 
         <RelativeLayout
             android:layout_width="70dp"
-            android:layout_height="wrap_content"
+            android:layout_height="40dp"
             android:layout_centerVertical="true"
             android:background="@drawable/coni"
             android:layout_marginLeft="5dp"
@@ -53,7 +61,7 @@
 
             <ImageButton
                 android:layout_width="45dp"
-                android:layout_height="40dp"
+                android:layout_height="25dp"
                 android:id="@+id/imageButton3"
                 android:layout_centerVertical="true"
                 android:layout_marginLeft="10dp"
@@ -65,7 +73,7 @@
 
         <RelativeLayout
             android:layout_width="85dp"
-            android:layout_height="wrap_content"
+            android:layout_height="40dp"
             android:layout_centerVertical="true"
             android:layout_centerHorizontal="true"
             android:background="@drawable/coni"
@@ -77,7 +85,7 @@
                 android:text="0"
                 android:layout_centerHorizontal="true"
                 android:textColor="#ffffffff"
-                android:textSize="40sp"
+                android:textSize="35sp"
                 android:id="@+id/textViewCurLevel"
                 android:alpha="0.7"/>
 
