--- a/app/src/main/res/layout-large/main.xml
+++ b/app/src/main/res/layout-large/main.xml
@@ -15,7 +15,16 @@
             android:layout_centerVertical="true"
             android:layout_alignParentRight="true"
             android:layout_marginRight="5dp"
+            android:id="@+id/relativeLayoutGold"
             android:onClick="ShowGameshopPopUp">
+
+            <ImageView
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:background="@drawable/plus"
+                android:layout_alignParentLeft="true"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="7dp"/>
 
             <TextView
                 android:layout_width="wrap_content"
@@ -41,10 +50,9 @@
         </RelativeLayout>
 
 
-
         <RelativeLayout
             android:layout_width="85dp"
-            android:layout_height="wrap_content"
+            android:layout_height="40dp"
             android:layout_centerVertical="true"
             android:layout_centerHorizontal="true"
             android:background="@drawable/coni"
@@ -56,7 +64,7 @@
                 android:text="0"
                 android:layout_centerHorizontal="true"
                 android:textColor="#ffffffff"
-                android:textSize="40sp"
+                android:textSize="35sp"
                 android:id="@+id/textViewCurLevel"
                 android:alpha="0.7"/>
 
@@ -86,7 +94,6 @@
 
 
     </RelativeLayout>
-
 
     <ImageView
         android:layout_width="220dp"
