--- a/app/src/main/res/layout-xlarge/about.xml
+++ b/app/src/main/res/layout-xlarge/about.xml
@@ -6,20 +6,30 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="80dp">
+        android:layout_height="65dp">
 
         <RelativeLayout
             android:layout_width="200dp"
-            android:layout_height="50dp"
+            android:layout_height="55dp"
             android:background="@drawable/coni"
             android:layout_centerVertical="true"
             android:layout_alignParentRight="true"
-            android:layout_marginRight="10dp">
+            android:layout_marginRight="10dp"
+            android:id="@+id/relativeLayoutGold"
+            android:onClick="ShowGameshopPopUp">
+
+            <ImageView
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:background="@drawable/plus"
+                android:layout_alignParentLeft="true"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="10dp"/>
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="10000"
+                android:text="100"
                 android:alpha="0.7"
                 android:id="@+id/textViewGold"
                 android:layout_centerVertical="true"
@@ -41,7 +51,7 @@
 
         <RelativeLayout
             android:layout_width="90dp"
-            android:layout_height="wrap_content"
+            android:layout_height="55dp"
             android:layout_centerVertical="true"
             android:background="@drawable/coni"
             android:layout_marginLeft="10dp"
@@ -49,12 +59,12 @@
 
             <ImageButton
                 android:layout_width="65dp"
-                android:layout_height="60dp"
+                android:layout_height="35dp"
+                android:id="@+id/btnGoBackFromPopup"
                 android:layout_centerVertical="true"
                 android:layout_marginLeft="10dp"
                 android:alpha="0.7"
-                android:background="@drawable/arr"
-                android:id="@+id/btnGoBackFromPopup"/>
+                android:background="@drawable/arr"/>
 
         </RelativeLayout>
 
@@ -62,7 +72,7 @@
 
         <RelativeLayout
             android:layout_width="120dp"
-            android:layout_height="wrap_content"
+            android:layout_height="55dp"
             android:layout_centerVertical="true"
             android:layout_centerHorizontal="true"
             android:background="@drawable/coni"
@@ -71,10 +81,11 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="200"
+                android:text="0"
                 android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true"
                 android:textColor="#ffffffff"
-                android:textSize="55sp"
+                android:textSize="45sp"
                 android:id="@+id/textViewCurLevel"
                 android:alpha="0.7"/>
 
