--- a/app/src/main/res/layout-xlarge/game.xml
+++ b/app/src/main/res/layout-xlarge/game.xml
@@ -7,11 +7,11 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="80dp">
+        android:layout_height="65dp">
 
         <RelativeLayout
             android:layout_width="200dp"
-            android:layout_height="50dp"
+            android:layout_height="55dp"
             android:background="@drawable/coni"
             android:layout_centerVertical="true"
             android:layout_alignParentRight="true"
@@ -19,10 +19,18 @@
             android:id="@+id/relativeLayoutGold"
             android:onClick="ShowGameshopPopUp">
 
+            <ImageView
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:background="@drawable/plus"
+                android:layout_alignParentLeft="true"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="10dp"/>
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="10000"
+                android:text="100"
                 android:alpha="0.7"
                 android:id="@+id/textViewGold"
                 android:layout_centerVertical="true"
@@ -44,7 +52,7 @@
 
         <RelativeLayout
             android:layout_width="90dp"
-            android:layout_height="wrap_content"
+            android:layout_height="55dp"
             android:layout_centerVertical="true"
             android:background="@drawable/coni"
             android:layout_marginLeft="10dp"
@@ -53,7 +61,7 @@
 
             <ImageButton
                 android:layout_width="65dp"
-                android:layout_height="60dp"
+                android:layout_height="35dp"
                 android:id="@+id/imageButton3"
                 android:layout_centerVertical="true"
                 android:layout_marginLeft="10dp"
@@ -67,7 +75,7 @@
 
         <RelativeLayout
             android:layout_width="120dp"
-            android:layout_height="wrap_content"
+            android:layout_height="55dp"
             android:layout_centerVertical="true"
             android:layout_centerHorizontal="true"
             android:background="@drawable/coni"
@@ -78,8 +86,9 @@
                 android:layout_height="wrap_content"
                 android:text="0"
                 android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true"
                 android:textColor="#ffffffff"
-                android:textSize="55sp"
+                android:textSize="45sp"
                 android:id="@+id/textViewCurLevel"
                 android:alpha="0.7"/>
 
