--- a/app/src/main/res/layout/about.xml
+++ b/app/src/main/res/layout/about.xml
@@ -10,18 +10,22 @@
         android:id="@+id/header_panel">
 
         <RelativeLayout
-            android:layout_width="90dp"
+            android:layout_width="100dp"
             android:layout_height="30dp"
             android:background="@drawable/coni"
             android:layout_centerVertical="true"
             android:layout_alignParentRight="true"
-            android:layout_marginRight="3dp">
+            android:layout_marginRight="3dp"
+            android:id="@+id/relativeLayoutGold"
+            android:onClick="ShowGameshopPopUp">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="20sp"
-                android:text="+"/>
+            <ImageView
+                android:layout_width="15dp"
+                android:layout_height="15dp"
+                android:background="@drawable/plus"
+                android:layout_alignParentLeft="true"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="5dp"/>
 
             <TextView
                 android:layout_width="wrap_content"
@@ -57,13 +61,12 @@
             <ImageButton
                 android:layout_width="30dp"
                 android:layout_height="12dp"
+                android:id="@+id/btnGoBackFromPopup"
                 android:layout_centerVertical="true"
                 android:layout_centerHorizontal="true"
                 android:layout_marginLeft="10dp"
                 android:alpha="0.7"
-                android:background="@drawable/arr"
-                android:id="@+id/btnGoBackFromPopup"
-                />
+                android:background="@drawable/arr"/>
 
         </RelativeLayout>
 
