--- a/app/src/main/res/layout-large/main.xml
+++ b/app/src/main/res/layout-large/main.xml
@@ -114,7 +114,7 @@
         android:layout_alignStart="@+id/imageButtonPlay"
         android:layout_marginTop="20dp"
         android:background="@drawable/istore"
-        android:onClick="ShowGameshopPopUp"
+        android:onClick="gameshopButtonClick"
         android:layout_marginLeft="10dp"/>
 
     <ImageView
