--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -121,7 +121,7 @@
         android:layout_marginTop="20dp"
         android:layout_marginLeft="10dp"
         android:background="@drawable/istore"
-        android:onClick="ShowGameshopPopUp"/>
+        android:onClick="gameshopButtonClick"/>
 
     <ImageView
         android:layout_width="50dp"
