--- a/app/src/main/res/drawable/shadow.xml
+++ b/app/src/main/res/drawable/shadow.xml
@@ -3,9 +3,9 @@
 
     <item>
         <layer-list>
-            <item android:left="3dp" android:top="3dp">
+            <item android:left="0dp" android:top="0dp">
                 <shape>
-                    <corners android:radius="100dp" />
+                    <corners android:radius="10dp" />
                     <solid android:color="#ffdcdcdc" />
                 </shape>
             </item>
@@ -14,7 +14,7 @@
                     <gradient android:angle="270"
                         android:endColor="#ff4f6375" android:startColor="#ff4f6375" />
                     <stroke android:width="1dp" android:color="#ffe2e2e2" />
-                    <corners android:topRightRadius="10dp" android:topLeftRadius="10dp" />
+                    <corners android:topLeftRadius="10dp" android:topRightRadius="10dp"/>
 
                 </shape>
             </item>
