--- a/app/src/main/res/layout/daily_coins.xml
+++ b/app/src/main/res/layout/daily_coins.xml
@@ -29,7 +29,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Ежедневное награждение"
+                android:text="Ежедневное вознаграждение"
                 android:textSize="17sp"
                 android:textColor="#ffffff"
                 android:layout_centerHorizontal="true"
@@ -69,6 +69,7 @@
                 android:textColor="#ffffffff"
                 android:textSize="30sp"
                 android:layout_centerVertical="true"
+                android:id="@+id/textViewDay"
                 />
 
 
@@ -99,6 +100,7 @@
                     android:layout_marginLeft="10dp"
                     android:textColor="#ffffffff"
                     android:textSize="40sp"
+                    android:id="@+id/textViewCoins"
                     />
 
                 <ImageView
