--- a/app/src/main/res/layout-large/about.xml
+++ b/app/src/main/res/layout-large/about.xml
@@ -81,6 +81,7 @@
                 android:layout_height="wrap_content"
                 android:text="0"
                 android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true"
                 android:textColor="#ffffffff"
                 android:textSize="35sp"
                 android:id="@+id/textViewCurLevel"
