--- a/app/src/main/res/layout-large/main.xml
+++ b/app/src/main/res/layout-large/main.xml
@@ -1,4 +1,5 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent"  tools:context=".MainActivity"
     android:background="@drawable/fullfon"
@@ -110,5 +111,18 @@
         android:onClick="ShowAboutPopUp"
         android:layout_marginRight="10dp"/>
 
+    <com.google.android.gms.ads.AdView
+        xmlns:ads="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/adView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        ads:adUnitId="ca-app-pub-3376890691318599/3908610460"
+        ads:adSize="BANNER"/>
 
+<LinearLayout
+    android:orientation="horizontal"
+    android:layout_width="match_parent"
+    android:layout_height="30dp"
+    android:background="@color/ripple_material_dark"
+    android:id="@+id/admob"></LinearLayout>
 </RelativeLayout>
