займаюсь баловством з мейн актівіті)

--- a/app/src/main/res/layout-xlarge/main.xml
+++ b/app/src/main/res/layout-xlarge/main.xml
@@ -112,5 +112,10 @@
         android:layout_alignEnd="@+id/imageButtonPlay"
         android:background="@drawable/infa"/>
 
-
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:background="@color/ripple_material_dark"
+        android:id="@+id/admob"></LinearLayout>
 </RelativeLayout>
