--- a/app/src/main/res/layout-large/win.xml
+++ b/app/src/main/res/layout-large/win.xml
@@ -112,5 +112,11 @@
 
     </RelativeLayout>
 
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:background="@color/ripple_material_dark"
+        android:id="@+id/admob"></LinearLayout>
 
 </RelativeLayout>
