--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -11,5 +11,11 @@
         <item name="android:activityCloseExitAnimation">@anim/activity_down_up_close_exit</item>
         <item name="android:activityCloseEnterAnimation">@anim/activity_down_up_close_enter</item>
     </style>
-
+    <style name="AppThemeDialog" parent="@android:style/Theme.Dialog">
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:windowBackground">@color/dialogbg</item>
+        <!--<item name="windowCloseOnTouchOutside">false</item>-->
+        <item name="android:layout_margin">0dp</item>
+        <item name="android:padding">0dp</item>
+    </style>
 </resources>
