--- a/app/src/main/res/layout-large/about.xml
+++ b/app/src/main/res/layout-large/about.xml
@@ -16,7 +16,7 @@
             android:layout_alignParentRight="true"
             android:layout_marginRight="5dp"
             android:id="@+id/relativeLayoutGold"
-            android:onClick="ShowGameshopPopUp">
+            android:onClick="ShowGameShop">
 
             <ImageView
                 android:layout_width="20dp"
