--- a/app/src/main/res/layout-large/gameshop.xml
+++ b/app/src/main/res/layout-large/gameshop.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:layout_width="400dp"
+    android:layout_height="485dp"
+    android:background="#00F8F8F8"
     >
 
     <RelativeLayout
