--- a/app/src/main/res/layout/about.xml
+++ b/app/src/main/res/layout/about.xml
@@ -17,7 +17,7 @@
             android:layout_alignParentRight="true"
             android:layout_marginRight="3dp"
             android:id="@+id/relativeLayoutGold"
-            android:onClick="ShowGameshopPopUp">
+            android:onClick="ShowGameShop">
 
             <ImageView
                 android:layout_width="15dp"
