--- a/app/src/main/res/layout/daily_coins.xml
+++ b/app/src/main/res/layout/daily_coins.xml
@@ -97,7 +97,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="10"
-                    android:layout_marginLeft="10dp"
+                    android:layout_marginLeft="8dp"
+                    android:layout_marginRight="10dp"
                     android:textColor="#ffffffff"
                     android:textSize="40sp"
                     android:id="@+id/textViewCoins"
