--- a/app/src/main/res/layout/game.xml
+++ b/app/src/main/res/layout/game.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/fullfon"
@@ -103,7 +103,7 @@
 
     </RelativeLayout>
 
-    <RelativeLayout android:id="@+id/container" android:layout_width="match_parent" android:layout_height="350dp">
+    <RelativeLayout android:id="@+id/container" android:layout_width="match_parent" android:layout_height="350dp" android:layout_marginTop="40dp">
         <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="vertical" android:paddingTop="10dp" android:gravity="center" android:layout_marginTop="10dp">
             <!--
              This is an example layout containing thumbnail image buttons that, when pressed,
@@ -141,6 +141,7 @@
         </LinearLayout>
     </RelativeLayout>
 <LinearLayout
+    android:layout_marginTop="395dp"
     android:layout_width="match_parent"
     android:layout_height="50dp"
     android:gravity="center"
@@ -156,6 +157,7 @@
         android:layout_width="match_parent"
         android:layout_height="100dp"
         android:gravity="center"
+        android:layout_marginTop="450dp"
         >
 
         <Button
@@ -318,12 +320,21 @@
 
     </RelativeLayout>
 
-    <com.google.android.gms.ads.AdView
-        xmlns:ads="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/adView"
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        ads:adUnitId="ca-app-pub-3376890691318599/3908610460"
-        ads:adSize="BANNER"/>
+        android:layout_alignParentBottom="true">
 
-</LinearLayout>
+        <com.google.android.gms.ads.AdView
+            xmlns:ads="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/adView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            ads:adUnitId="ca-app-pub-3376890691318599/3908610460"
+            ads:adSize="SMART_BANNER"/>
+
+        </LinearLayout>
+
+
+
+</RelativeLayout>
