--- a/app/src/main/res/values/quotations.xml
+++ b/app/src/main/res/values/quotations.xml
@@ -2,7 +2,7 @@
 <resources>
     <string name="q1" id="1">jsdlfjdfjhgkdfgkdfkjgdfgdkhkfgkjd</string>
     <string name="q2" id="2">ksdjflksdjfkls</string>
-    <string name="q3" id="3">azazaza</string>
+    <string name="q3" id="3">Балкон странное существо, то ему холодно то ему Макс кампота разлил на его прекрасную душу</string>
     <string name="q4" id="4">djksfdlkf</string>
     <string name="q5" id="5">dddddddddddddddddddddddd</string>
     <string name="q6" id="6">jjgggggggggggggggggg</string>
