--- a/app/src/main/res/layout-large/game.xml
+++ b/app/src/main/res/layout-large/game.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/fullfon"
@@ -7,7 +7,8 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="50dp">
+        android:layout_height="50dp"
+        >
 
         <RelativeLayout
             android:layout_width="150dp"
@@ -85,7 +86,7 @@
                 android:text="0"
                 android:layout_centerHorizontal="true"
                 android:textColor="#ffffffff"
-                android:textSize="35sp"
+                android:textSize="30sp"
                 android:id="@+id/textViewCurLevel"
                 android:alpha="0.7"/>
 
@@ -100,7 +101,7 @@
 
     </RelativeLayout>
 
-    <RelativeLayout android:id="@+id/container" android:layout_width="match_parent" android:layout_height="550dp">
+    <RelativeLayout android:id="@+id/container" android:layout_width="match_parent" android:layout_height="550dp" android:layout_marginTop="60dp" android:layout_alignTop="@+id/buttonLetter11">
         <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="vertical" android:paddingTop="10dp" android:gravity="center">
             <!--
              This is an example layout containing thumbnail image buttons that, when pressed,
@@ -121,7 +122,8 @@
         android:layout_height="50dp"
         android:gravity="center"
         android:id="@+id/guessWordsLayout"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:layout_marginTop="615dp">
 
 
 
@@ -134,6 +136,7 @@
         android:layout_width="match_parent"
         android:layout_height="150dp"
         android:gravity="center"
+        android:layout_marginTop="670dp"
         >
 
         <Button
@@ -283,12 +286,23 @@
 
     </RelativeLayout>
 
+<LinearLayout
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_alignParentBottom="true">
+
     <com.google.android.gms.ads.AdView
         xmlns:ads="http://schemas.android.com/apk/res-auto"
+        android:layout_alignParentBottom="true"
         android:id="@+id/adView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         ads:adUnitId="ca-app-pub-3376890691318599/3908610460"
-        ads:adSize="BANNER"/>
+        ads:adSize="SMART_BANNER"/>
 
-</LinearLayout>
+    </LinearLayout>
+
+
+
+
+</RelativeLayout>
