--- a/app/src/main/res/layout-large/main.xml
+++ b/app/src/main/res/layout-large/main.xml
@@ -66,7 +66,7 @@
                 android:layout_centerHorizontal="true"
                 android:layout_centerVertical="true"
                 android:textColor="#ffffffff"
-                android:textSize="35sp"
+                android:textSize="30sp"
                 android:id="@+id/textViewCurLevel"
                 android:alpha="0.7"/>
 
@@ -112,19 +112,15 @@
         android:onClick="ShowAboutPopUp"
         android:layout_marginRight="10dp"/>
 
-    <com.google.android.gms.ads.AdView
-        xmlns:ads="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/adView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        ads:adUnitId="ca-app-pub-3376890691318599/3908610460"
-        ads:adSize="BANNER"/>
 
-<LinearLayout
-    android:orientation="horizontal"
-    android:layout_width="match_parent"
-    android:layout_height="30dp"
-    android:background="@color/ripple_material_dark"
-    android:id="@+id/admob"></LinearLayout>
+
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/admob"
+        android:layout_alignParentBottom="true">
+
+        </LinearLayout>
 
 </RelativeLayout>
