--- a/app/src/main/res/layout-xlarge/game.xml
+++ b/app/src/main/res/layout-xlarge/game.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/fullfon"
@@ -101,7 +101,7 @@
 
     </RelativeLayout>
 
-    <RelativeLayout android:id="@+id/container" android:layout_width="match_parent" android:layout_height="710dp">
+    <RelativeLayout android:id="@+id/container" android:layout_width="match_parent" android:layout_height="710dp" android:layout_marginTop="75dp">
         <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="vertical" android:paddingTop="10dp" android:gravity="center">
             <!--
              This is an example layout containing thumbnail image buttons that, when pressed,
@@ -118,6 +118,7 @@
         </RelativeLayout>
     </RelativeLayout>
     <LinearLayout
+        android:layout_marginTop="795dp"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:gravity="center"
@@ -132,6 +133,7 @@
 
 
     <RelativeLayout
+        android:layout_marginTop="855dp"
         android:layout_width="match_parent"
         android:layout_height="200dp"
         android:gravity="center"
@@ -284,12 +286,21 @@
 
     </RelativeLayout>
 
-    <com.google.android.gms.ads.AdView
-        xmlns:ads="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/adView"
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        ads:adUnitId="ca-app-pub-3376890691318599/3908610460"
-        ads:adSize="BANNER"/>
+        android:layout_alignParentBottom="true">
 
-</LinearLayout>
+        <com.google.android.gms.ads.AdView
+            xmlns:ads="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/adView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            ads:adUnitId="ca-app-pub-3376890691318599/3908610460"
+            ads:adSize="SMART_BANNER"/>
+
+    </LinearLayout>
+
+
+
+</RelativeLayout>
