--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -3,7 +3,7 @@
     android:layout_height="match_parent"
 
 
-    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
+   tools:context=".MainActivity"
     android:background="@drawable/fullfon"
     android:id="@+id/rootLayoutMain">
 
@@ -14,7 +14,7 @@
         android:alpha="1.0">
 
         <RelativeLayout
-            android:layout_width="90dp"
+            android:layout_width="100dp"
             android:layout_height="30dp"
             android:background="@drawable/coni"
             android:layout_centerVertical="true"
@@ -121,8 +121,10 @@
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:background="@color/ripple_material_dark"
-        android:id="@+id/admob"></LinearLayout>
+        android:layout_height="wrap_content"
+        android:id="@+id/admob"
+        android:layout_alignParentBottom="true">
+
+    </LinearLayout>
 
 </RelativeLayout>
