--- a/app/src/main/res/layout-large/game.xml
+++ b/app/src/main/res/layout-large/game.xml
@@ -43,7 +43,7 @@
             <ImageView
                 android:layout_width="25dp"
                 android:layout_height="25dp"
-                android:background="@drawable/coin"
+                android:background="@drawable/coins"
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
                 android:id="@+id/imageView"
@@ -109,11 +109,11 @@
                          the ZoomActivity class.
             -->
             <RelativeLayout android:layout_width="530dp" android:layout_height="530dp" android:layout_centerHorizontal="true">
-                <ImageButton android:layout_width="260dp" android:layout_height="260dp" android:layout_x="0dp" android:layout_y="0dp" android:background="#ff20195d" android:layout_marginBottom="5dp" android:id="@+id/imageView1" android:layout_marginRight="1dp" android:scaleType="centerCrop" android:layout_alignParentTop="true" android:layout_alignParentLeft="true" android:padding="3dp"/>
-                <ImageButton android:layout_width="260dp" android:layout_height="260dp" android:layout_x="170dp" android:background="#ff20195d" android:adjustViewBounds="false" android:baselineAlignBottom="false" android:layout_alignParentRight="true" android:layout_alignParentBottom="true" android:layout_marginLeft="5dp" android:id="@+id/imageView2" android:layout_marginRight="1dp" android:scaleType="centerCrop" android:padding="3dp"/>
-                <ImageButton android:layout_width="260dp" android:layout_height="260dp" android:layout_x="0dp" android:layout_y="170dp" android:background="#ff20195d" android:clickable="false" android:layout_alignParentBottom="true" android:layout_alignParentLeft="true" android:layout_alignParentStart="true" android:id="@+id/imageView3" android:layout_marginRight="1dp" android:scaleType="centerCrop" android:padding="3dp"/>
-                <ImageButton android:layout_width="260dp" android:layout_height="260dp" android:layout_x="170dp" android:layout_y="170dp" android:background="#ff20195d" android:layout_alignParentTop="true" android:layout_alignParentRight="true" android:layout_marginLeft="5dp" android:layout_marginBottom="5dp" android:id="@+id/imageView4" android:layout_marginRight="1dp" android:scaleType="centerCrop" android:padding="3dp"/>
-                <ImageView android:id="@+id/expanded_image" android:layout_width="530dp" android:layout_height="530dp" android:visibility="invisible" android:contentDescription="@string/description_zoom_touch_close" android:layout_centerInParent="true" android:layout_x="0dp" android:layout_y="0dp" android:padding="4dp" android:background="#ff20195d"/>
+                <ImageButton android:layout_width="260dp" android:layout_height="260dp" android:layout_x="0dp" android:layout_y="0dp" android:background="#ff384653" android:layout_marginBottom="5dp" android:id="@+id/imageView1" android:layout_marginRight="1dp" android:scaleType="centerCrop" android:layout_alignParentTop="true" android:layout_alignParentLeft="true" android:padding="3dp"/>
+                <ImageButton android:layout_width="260dp" android:layout_height="260dp" android:layout_x="170dp" android:background="#ff384653" android:adjustViewBounds="false" android:baselineAlignBottom="false" android:layout_alignParentRight="true" android:layout_alignParentBottom="true" android:layout_marginLeft="5dp" android:id="@+id/imageView2" android:layout_marginRight="1dp" android:scaleType="centerCrop" android:padding="3dp"/>
+                <ImageButton android:layout_width="260dp" android:layout_height="260dp" android:layout_x="0dp" android:layout_y="170dp" android:background="#ff384653" android:clickable="false" android:layout_alignParentBottom="true" android:layout_alignParentLeft="true" android:layout_alignParentStart="true" android:id="@+id/imageView3" android:layout_marginRight="1dp" android:scaleType="centerCrop" android:padding="3dp"/>
+                <ImageButton android:layout_width="260dp" android:layout_height="260dp" android:layout_x="170dp" android:layout_y="170dp" android:background="#ff384653" android:layout_alignParentTop="true" android:layout_alignParentRight="true" android:layout_marginLeft="5dp" android:layout_marginBottom="5dp" android:id="@+id/imageView4" android:layout_marginRight="1dp" android:scaleType="centerCrop" android:padding="3dp"/>
+                <ImageView android:id="@+id/expanded_image" android:layout_width="530dp" android:layout_height="530dp" android:visibility="invisible" android:contentDescription="@string/description_zoom_touch_close" android:layout_centerInParent="true" android:layout_x="0dp" android:layout_y="0dp" android:padding="4dp" android:background="#ff384653"/>
             </RelativeLayout>
         </RelativeLayout>
     </RelativeLayout>
@@ -146,14 +146,18 @@
             android:layout_marginLeft="5dp"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
-            android:background="#A4FF8144"
+            android:background="#e100d454"
+            android:textSize="35sp"
+            android:textColor="#ffffffff"
             android:onClick="onClickActualLetter"/>
 
         <Button
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:id="@+id/buttonLetter1"
-            android:background="#A4FF8144"
+            android:background="#e100d454"
+            android:textSize="35sp"
+            android:textColor="#ffffffff"
             android:layout_marginLeft="10dp"
             android:layout_toRightOf="@+id/buttonLetter0"
             android:layout_toEndOf="@+id/buttonLetter0"
@@ -163,7 +167,9 @@
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:id="@+id/buttonLetter2"
-            android:background="#A4FF8144"
+            android:background="#e100d454"
+            android:textSize="35sp"
+            android:textColor="#ffffffff"
             android:layout_marginLeft="10dp"
             android:layout_toRightOf="@+id/buttonLetter1"
             android:layout_toEndOf="@+id/buttonLetter1"
@@ -173,7 +179,9 @@
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:id="@+id/buttonLetter3"
-            android:background="#A4FF8144"
+            android:background="#e100d454"
+            android:textSize="35sp"
+            android:textColor="#ffffffff"
             android:layout_marginLeft="10dp"
             android:layout_toRightOf="@+id/buttonLetter2"
             android:layout_toEndOf="@+id/buttonLetter2"
@@ -183,7 +191,9 @@
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:id="@+id/buttonLetter4"
-            android:background="#A4FF8144"
+            android:background="#e100d454"
+            android:textSize="35sp"
+            android:textColor="#ffffffff"
             android:layout_marginLeft="10dp"
             android:layout_toRightOf="@+id/buttonLetter3"
             android:layout_toEndOf="@+id/buttonLetter3"
@@ -194,7 +204,9 @@
             android:layout_height="60dp"
             android:id="@+id/buttonLetter5"
             android:layout_marginLeft="10dp"
-            android:background="#A4FF8144"
+            android:background="#e100d454"
+            android:textSize="35sp"
+            android:textColor="#ffffffff"
             android:layout_alignParentTop="true"
             android:layout_toRightOf="@+id/buttonLetter4"
             android:layout_toEndOf="@+id/buttonLetter4"
@@ -209,16 +221,18 @@
             android:layout_toRightOf="@+id/buttonLetter5"
             android:layout_toEndOf="@+id/buttonLetter5"
             android:onClick="ShowHintsPopUp"
-            android:textSize="@dimen/actual_letter_text_size"
+            android:textSize="40sp"
             android:text="\?"
             android:textColor="#ffffffff"
-            android:background="#ff1ed448"/>
+            android:background="#b5fffe00"/>
 
         <Button
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:id="@+id/buttonLetter6"
-            android:background="#A4FF8144"
+            android:background="#e100d454"
+            android:textSize="35sp"
+            android:textColor="#ffffffff"
             android:layout_toLeftOf="@+id/buttonLetter1"
             android:layout_toStartOf="@+id/buttonLetter1"
             android:layout_marginTop="70dp"
@@ -228,7 +242,9 @@
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:id="@+id/buttonLetter7"
-            android:background="#A4FF8144"
+            android:background="#e100d454"
+            android:textSize="35sp"
+            android:textColor="#ffffffff"
             android:layout_alignTop="@+id/buttonLetter6"
             android:layout_toLeftOf="@+id/buttonLetter2"
             android:layout_toStartOf="@+id/buttonLetter2"
@@ -238,7 +254,9 @@
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:id="@+id/buttonLetter8"
-            android:background="#A4FF8144"
+            android:background="#e100d454"
+            android:textSize="35sp"
+            android:textColor="#ffffffff"
             android:layout_alignTop="@+id/buttonLetter7"
             android:layout_toLeftOf="@+id/buttonLetter3"
             android:layout_toStartOf="@+id/buttonLetter3"
@@ -248,7 +266,9 @@
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:id="@+id/buttonLetter9"
-            android:background="#A4FF8144"
+            android:background="#e100d454"
+            android:textSize="35sp"
+            android:textColor="#ffffffff"
             android:layout_alignTop="@+id/buttonLetter8"
             android:layout_toLeftOf="@+id/buttonLetter4"
             android:layout_toStartOf="@+id/buttonLetter4"
@@ -258,7 +278,9 @@
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:id="@+id/buttonLetter10"
-            android:background="#A4FF8144"
+            android:background="#e100d454"
+            android:textSize="35sp"
+            android:textColor="#ffffffff"
             android:layout_alignTop="@+id/buttonLetter9"
             android:layout_alignLeft="@+id/buttonLetter4"
             android:layout_alignStart="@+id/buttonLetter4"
@@ -268,7 +290,9 @@
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:id="@+id/buttonLetter11"
-            android:background="#A4FF8144"
+            android:background="#e100d454"
+            android:textSize="35sp"
+            android:textColor="#ffffffff"
             android:layout_alignTop="@+id/buttonLetter10"
             android:layout_toLeftOf="@+id/imageButton8"
             android:layout_toStartOf="@+id/imageButton8"
@@ -278,7 +302,9 @@
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:id="@+id/buttonLetter12"
-            android:background="#A4FF8144"
+            android:background="#e100d454"
+            android:textSize="35sp"
+            android:textColor="#ffffffff"
             android:layout_alignTop="@+id/buttonLetter11"
             android:layout_alignLeft="@+id/imageButton8"
             android:layout_alignStart="@+id/imageButton8"
