--- a/app/src/main/res/layout-large/gameshop.xml
+++ b/app/src/main/res/layout-large/gameshop.xml
@@ -3,14 +3,10 @@
     android:orientation="vertical"
     android:layout_width="400dp"
     android:layout_height="485dp"
-    android:background="@drawable/lay"
+    android:theme="@style/Theme.AppCompat.Dialog"
     >
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="#000000"
-        android:alpha="0.5"></RelativeLayout>
+
 
     <RelativeLayout
         android:layout_width="400dp"
