--- a/app/src/main/res/layout-large/hints.xml
+++ b/app/src/main/res/layout-large/hints.xml
@@ -10,7 +10,7 @@
 
     <RelativeLayout
         android:layout_width="400dp"
-        android:layout_height="320dp"
+        android:layout_height="340dp"
         android:background="@drawable/bestbuy"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
@@ -31,7 +31,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Магазин"
+                android:text="Подсказки"
                 android:textSize="35sp"
                 android:textColor="#ffffff"
                 android:layout_centerHorizontal="true"
@@ -60,8 +60,8 @@
             android:id="@+id/btnOpenLetter"
             android:layout_below="@+id/relativeLayout"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="5dp"
-            android:layout_marginBottom="5dp">
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp">
 
             <TextView
                 android:layout_width="wrap_content"
@@ -86,16 +86,15 @@
                     android:text="50"
                     android:textColor="#ffffffff"
                     android:textSize="25sp"
-                    android:layout_alignTop="@+id/imageView6"
                     android:layout_toLeftOf="@+id/imageView6"
-                    android:layout_toStartOf="@+id/imageView6"
+                    android:layout_centerVertical="true"
                     android:layout_marginRight="3dp"
                     />
 
                 <ImageView
                     android:layout_width="30dp"
                     android:layout_height="30dp"
-                    android:background="@drawable/coin"
+                    android:background="@drawable/coins"
                     android:layout_marginRight="5dp"
                     android:textColor="#ffffff"
                     android:layout_centerVertical="true"
@@ -116,7 +115,7 @@
             android:layout_below="@+id/btnOpenLetter"
             android:layout_alignLeft="@+id/btnOpenLetter"
             android:layout_alignStart="@+id/btnOpenLetter"
-            android:layout_marginBottom="5dp">
+            android:layout_marginBottom="10dp">
 
             <TextView
                 android:layout_width="wrap_content"
@@ -141,16 +140,15 @@
                     android:text="100"
                     android:textColor="#ffffffff"
                     android:textSize="25sp"
-                    android:layout_alignTop="@+id/imageView7"
+                    android:layout_centerVertical="true"
                     android:layout_toLeftOf="@+id/imageView7"
-                    android:layout_toStartOf="@+id/imageView7"
                     android:layout_marginRight="3dp"
                     />
 
                 <ImageView
                     android:layout_width="30dp"
                     android:layout_height="30dp"
-                    android:background="@drawable/coin"
+                    android:background="@drawable/coins"
                     android:layout_marginRight="3dp"
                     android:textColor="#ffffff"
                     android:layout_centerVertical="true"
@@ -195,16 +193,15 @@
                     android:text="200"
                     android:textColor="#ffffffff"
                     android:textSize="25sp"
-                    android:layout_alignTop="@+id/imageView8"
+                    android:layout_centerVertical="true"
                     android:layout_toLeftOf="@+id/imageView8"
-                    android:layout_toStartOf="@+id/imageView8"
                     android:layout_marginRight="3dp"
                     />
 
                 <ImageView
                     android:layout_width="30dp"
                     android:layout_height="30dp"
-                    android:background="@drawable/coin"
+                    android:background="@drawable/coins"
                     android:layout_marginRight="3dp"
                     android:textSize="20sp"
                     android:textColor="#ffffff"
