--- a/app/src/main/res/layout-large/win.xml
+++ b/app/src/main/res/layout-large/win.xml
@@ -10,9 +10,10 @@
         android:alpha="0.7"></RelativeLayout>
 
     <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_centerVertical="true">
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true">
 
         <TextView
             android:layout_width="wrap_content"
@@ -36,10 +37,12 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:background="@drawable/wor"
+            android:padding="10dp"
             android:text="А Ф Р И К А"
             android:textColor="#ffffffff"
             android:textSize="60sp"
-
+            android:layout_marginBottom="10dp"
             android:layout_marginTop="15dp"
             android:layout_below="@+id/textView4"
             android:layout_centerHorizontal="true"
@@ -53,61 +56,65 @@
             android:layout_marginRight="10dp">
 
             <TextView
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="А в Африке капец как жарко - что дохнут мухи и слоны"
                 android:textColor="#ffffffff"
                 android:textSize="35sp"
+
                 android:id="@+id/textViewQuotation"
                 android:layout_centerHorizontal="true"
                 />
-
-            </RelativeLayout>
-
-
-        <RelativeLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_centerHorizontal="true"
-            android:id="@+id/relativeLayout2">
-
-            <TextView
+            <RelativeLayout
+                android:layout_marginTop="5dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="25"
-                android:textColor="#FFFFFF"
-                android:textSize="70sp"
-                android:id="@+id/textView5"
-                android:layout_centerVertical="true"
-                android:layout_marginRight="5dp"/>
+                android:layout_below="@+id/textViewQuotation"
+                android:layout_centerHorizontal="true"
+                android:id="@+id/relativeLayout3">
 
-            <ImageView
-                android:layout_width="106dp"
-                android:layout_height="70dp"
-                android:background="@drawable/coins"
-                android:id="@+id/imageView5"
-                android:layout_alignBottom="@+id/textView5"
-                android:layout_toRightOf="@+id/textView5"
-                android:layout_toEndOf="@+id/textView5"
-                android:layout_centerVertical="true"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="25"
+                    android:textColor="#FFFFFF"
+                    android:textSize="70sp"
+                    android:id="@+id/textView5"
+                    android:layout_centerVertical="true"
+                    android:layout_marginRight="5dp"/>
+
+                <ImageView
+                    android:layout_width="70dp"
+                    android:layout_height="70dp"
+                    android:background="@drawable/coins"
+                    android:id="@+id/imageView5"
+                    android:layout_alignBottom="@+id/textView5"
+                    android:layout_toRightOf="@+id/textView5"
+                    android:layout_toEndOf="@+id/textView5"
+                    android:layout_centerVertical="true"/>
+
+
+            </RelativeLayout>
+
+
+            <Button
+                android:layout_width="270dp"
+                android:layout_height="100dp"
+                android:text="Продолжить"
+                android:id="@+id/buttonClose"
+                android:textSize="30sp"
+                android:textColor="#ffffffff"
+                android:background="@drawable/next"
+                android:layout_marginTop="15dp"
+                android:layout_below="@+id/relativeLayout3"
+                android:layout_centerHorizontal="true" />
+
+
 
             </RelativeLayout>
 
 
 
-
-        <Button
-            android:layout_width="270dp"
-            android:layout_height="100dp"
-            android:text="Продолжить"
-            android:id="@+id/buttonClose"
-            android:textSize="30sp"
-            android:textColor="#ffffffff"
-            android:background="#2b394a"
-            android:layout_marginTop="20dp"
-            android:layout_below="@+id/relativeLayout2"
-            android:layout_centerHorizontal="true" />
 
 
     </RelativeLayout>
