--- a/app/src/main/res/layout-xlarge/about.xml
+++ b/app/src/main/res/layout-xlarge/about.xml
@@ -41,7 +41,7 @@
             <ImageView
                 android:layout_width="33dp"
                 android:layout_height="33dp"
-                android:background="@drawable/coin"
+                android:background="@drawable/coins"
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
                 android:id="@+id/imageView"
