--- a/app/src/main/res/layout-xlarge/hints.xml
+++ b/app/src/main/res/layout-xlarge/hints.xml
@@ -10,7 +10,7 @@
 
     <RelativeLayout
         android:layout_width="500dp"
-        android:layout_height="420dp"
+        android:layout_height="440dp"
         android:background="@drawable/bestbuy"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
@@ -29,7 +29,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Магазин"
+                android:text="Подсказки"
                 android:textSize="50sp"
                 android:textColor="#ffffff"
                 android:layout_centerHorizontal="true"
