--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -20,7 +20,7 @@
             android:layout_centerVertical="true"
             android:layout_alignParentRight="true"
             android:layout_marginRight="3dp"
-            android:onClick="ShowGameshopPopUp">
+            android:onClick="gameshopButtonClick">
 
             <ImageView
                 android:layout_width="15dp"
@@ -45,7 +45,7 @@
             <ImageView
                 android:layout_width="20dp"
                 android:layout_height="20dp"
-                android:background="@drawable/coin"
+                android:background="@drawable/coins"
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
                 android:id="@+id/imageView"
@@ -105,7 +105,7 @@
         android:layout_marginTop="20dp"
         android:layout_marginLeft="10dp"
         android:background="@drawable/istore"
-        android:onClick="ShowGameshopPopUp"/>
+        android:onClick="gameshopButtonClick"/>
 
     <ImageView
         android:layout_width="50dp"
