--- a/app/src/main/res/layout-large/win.xml
+++ b/app/src/main/res/layout-large/win.xml
@@ -23,7 +23,8 @@
             android:layout_centerHorizontal="true"
             android:layout_marginTop="20dp"
             android:id="@+id/textView3"
-            android:textColor="#ffffffff"/>
+            android:textColor="#ffffffff"
+            android:textStyle="bold" />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -64,7 +65,7 @@
 
                 android:id="@+id/textViewQuotation"
                 android:layout_centerHorizontal="true"
-                />
+                android:textStyle="italic" />
             <RelativeLayout
                 android:layout_marginTop="5dp"
                 android:layout_width="wrap_content"
