--- a/app/src/main/res/layout-small/rate.xml
+++ b/app/src/main/res/layout-small/rate.xml
@@ -34,6 +34,7 @@
         android:layout_marginTop="55dp"
         android:layout_marginBottom="10dp"
         android:layout_centerHorizontal="true"
+        android:id="@+id/btnRate">
         >
         <TextView
             android:layout_width="wrap_content"
@@ -53,6 +54,7 @@
         android:layout_marginTop="105dp"
         android:layout_marginBottom="10dp"
         android:layout_centerHorizontal="true"
+        android:id="@+id/btnLater">
         >
         <TextView
             android:layout_width="wrap_content"
@@ -72,6 +74,8 @@
         android:layout_marginTop="155dp"
         android:layout_marginBottom="10dp"
         android:layout_centerHorizontal="true"
+        android:id="@+id/btnForget"
+        android:onClick="NeverAsk">
         >
         <TextView
             android:layout_width="wrap_content"
