--- a/app/src/main/res/layout-xlarge/win.xml
+++ b/app/src/main/res/layout-xlarge/win.xml
@@ -23,7 +23,8 @@
             android:layout_centerHorizontal="true"
             android:layout_marginTop="20dp"
             android:id="@+id/textView3"
-            android:textColor="#ffffffff"/>
+            android:textColor="#ffffffff"
+            android:textStyle="bold" />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -63,7 +64,7 @@
                 android:textSize="50sp"
                 android:id="@+id/textViewQuotation"
                 android:layout_centerHorizontal="true"
-                />
+                android:textStyle="italic" />
 
             <RelativeLayout
                 android:layout_width="wrap_content"
